2006-03-09  Dick Porter  <dick@ximian.com>

	* file-io.c (get_file_attributes): Use S_ISLNK not "& S_IFLNK".
	Fixes bug 76966 again.

2006-03-07  Martin Baulig  <martin@ximian.com>

	* object.c
	(mono_field_get_value_object): Add support for MONO_TYPE_GENERICINST.

2006-03-07  Martin Baulig  <martin@ximian.com>

	* class.c
	(mono_class_get_full): Don't inflate TYPEDEF entries; fixes the
	regression introduced in r56970; see gtest-252.cs.

	* loader.c (mono_get_method_constrained): Correctly handle generic
	methods; see gtest-253.cs.

2006-03-04  Zoltan Varga  <vargaz@gmail.com>

	* icall.c (ves_icall_type_Equals): Handle NULLs. Fixes #77700.

2006-03-04  Martin Baulig  <martin@ximian.com>

	* icall.c (ves_icall_MonoGenericClass_GetParentType): Dynamically
	compute the parent type at runtime, just like we're already doing
	it for interfaces.

	* reflection.c
	(mono_reflection_bind_generic_parameters): Don't compute the
	parent type anymore.

	* class-internals.h (MonoDynamicGenericClass): Removed `parent'.

2006-03-04  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.h
	(mono_debugger_create_notification_function): Allocate memory at
	runtime and return a pointer to it.

2006-03-03  Dick Porter  <dick@ximian.com>
 
	* process.c
	(ves_icall_System_Diagnostics_Process_ShellExecuteEx_internal):
	Check parameters before dereferencing them.  Fixes Aaron's part of
	bug 77393.

Thu Mar 2 10:38:33 CET 2006 Paolo Molaro <lupus@ximian.com>

	* icall.c: backport memory corruption fix.

2006-03-01  Miguel de Icaza  <miguel@novell.com>
  
	* object-internals.h: New field to cache the assmebly name, patch
	from Tambet Ingo (tambet@ximian.com)
	
2006-02-24  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (mono_marshal_free_asany): Fix handling of blittable
	formatted classes. Fixes #77524.

2006-02-18  Zoltan Varga  <vargaz@gmail.com>

	* class.c (mono_class_get_exception_for_failure): Fix a warning.

	* marshal.c (mono_marshal_emit_native_wrapper): Handle FNPTR args and